versión 25 de mayo

--- a/index.html
+++ b/index.html
@@ -4,34 +4,63 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Blog de Paola Michel Medina </title>
 </head>
 <body>
+  <header>
+    <details>
+      <summary>
+        Setup
+      </summary>
+      <ol>
+  <a href="#google-chrome"></href> 1. Google Chrome </a><br>
+  <a href="#vsc">2. Visual Studio Code </a><br>
+  <a href="#figma"> 3. Figma </a><br>
+  <a href="#github"> 4. GitHub </a><br>
+  </ol>
+
+  </details>
+  <details>
+  <summary>
+    Conceptos esenciales del desarrollo Web
+  </summary>
+    <ol>
+  <a href="#html"> 1. Qué es HTML </a><br>
+  <a href="#etiquetas"> 2. Etiquetas </a><br>
+  <a href="#dom"> 3. DOM </a><br>
+  <a href="#semantica"> 4. Semántica </a><br>
+  <a href="#atributos"> 5. Atributos </a><br>
+  <a href="#css"> 6. Qué es CSS </a><br>
+    </ol>
+  </details>
+
    <h1>Curso esencial de HTML y CSS </h1>
    <p>Este es el inicio de tu carrera como Desarrollador Web, empezarás aprendiendo HTML y CSS para la creación de contenidos,
   en el nivel 2 aprenderás de componentes y en 3 sobre layouts.</p>
 
-  <img src="images/google.png" alt="Logo de Google Chrome" title="Logo de Google">
-  <h3>1.Google Chrome </h3>
+  <h2>Setup</h2>
+ <img src="images/google.png" alt="Logo de Google Chrome" title="Logo de Google">
+ <h3 id="google-chrome">1.Google Chrome</h3>
+
   <p> Chrome va a ser el navegador que utilizaremos en el curso por su extenso soporte de nuevos estándares y herramientas de
   desarrollo avanzadas y de amigable uso.
   <p/>
 
   <img src="images/visual.png" alt="Visual Studio Code" title="Visual Studio Code">
-  <h3>2.Visual Studio Code </h3>
+  <h3 id="vsc">2.Visual Studio Code</h3>
   <p> Visual Studio Code es el editor de texto más popular y potente del mercado actualmente, su fácil uso y la capacidad de
   extenderlo por medio de plugins lo hace el complemento perfecto para cualquier programador sin importar el lenguaje en
   el que se desemvuelva.
     <p />
 
   <img src="images/figma.png" alt="Figma" title="Figma">
-  <h3>3.Figma </h3>
+  <h3 id="figma">3.Figma</h3>
   <p> Figma es una la herramienta más popular en la actualidad para entregar diseños a los desarrolladores para su
   implementación por su fácil uso porque puede ser usado directamente desde el navegador.
     <p />
 
   <img src="images/gatito.png" alt="GitHup" title="GitHup">
-  <h3>4.GitHub </h3>
+  <h3 id="github">4.Github</h3>
   <p> Así como en Facebook te encuentran tus amigos, en Github te encuentran otras programadoras y programadores de todo el
   mundo, en vez de subir fotos de tus viajes aquí subes tu código y puedes elegir hacerlo “open source” o guardarlo de
   manera privada, Github será esencial para almacenar tu futuro portafolio.
@@ -42,12 +71,12 @@
     <h3>-Paola Michel Medina</h3>
 
    <p>Conceptos esenciales del Desarrollo Web</p>
-    <h2>1. Qué es HTML</h2>
+    <h2 id="html">1.Qué es HTML</h2>
     <p>Hyper Text Markup Language o Lenguaje de marcas Hipertexto. Es el componente más básico de la web. Define el significado
     y la estructura del contenido.</p>
 
   <img src="images/html.png" >
-<h1>2. Etiquetas</h1>
+<h2 id="etiquetas">2. Etiquetas</h2>
 <p>Las etiquetas HTML van a ayudarnos a brindar una estructura y semántica al contenido de nuestro website y cada una tiene
 características y usos diferentes aunque visualmente den un resultado similar.</p>
 <p>Muchas etiquetas son fácil de diferencias como los headings o las imágenes y otras diferentes como header, footer,
@@ -55,13 +84,14 @@ section o div, aquí es donde la semántica será la respuesta y si sabemos un p
 pequeña idea de su uso pero en este curso vamos a usar las más importantes y que serán parte de tu día a día como
 Software Developer.</p>
 
-<h1>3. DOM</h1>
+<h2 id="dom">3. DOM</h2>
 <p>El Document Object Model es una estructura de árbol que representará todos nuestros proyectos web como si un árbol
 genealógico fuera: padres, hijos, hermanos con niveles infinitos. cuando entendemos esta anidación podemos identificar
 dependencias, herencias en css y que tan complejo es nuestro proyecto.</p>
-  <  <img src="images/dom.png" alt="Tabla DOM" title="Tabla DOM">>
+    <img src="images/dom.png" alt="Tabla DOM" title="Tabla DOM" Width="900px">
   <br><br>
-  <h3>4. SEMATICA</h3>
+
+  <h2 id="semantica">4. Semántica</h2>
   La semántica le brinda sentido a cada elemento existen en un sitio web, algunos elementos será meramente decorativos y
   no deben
   significar nada pero otros serán títulos y deberán estar en diferente jerarquías o alguna secciones serán más relevantes
@@ -73,36 +103,38 @@ dependencias, herencias en css y que tan complejo es nuestro proyecto.</p>
   con habilidades diferentes puedan entender cada contenido.
   <br><br>
   <br><br>
-  <h3>5. ATRIBUTOS</h3>
+  <h2 id="atributos">5. Atributos</h2>
   Los atributos le dan características extra a las etiquetas para complementar información y son pre programadas por el
   navegador,
   algunos atributos funcionan en todas las etiquetas de la misma forma como ‘class’ pero otros atributos funcionan en solo
   alguna etiquetas como src
-  <h3>6. CSS</h3>
+  <br><br>
+  <br><br>
+  <h2 id="css">6.Qué es CSS</h2>
   Hojas de Estilo en Cascada (del inglés Cascading Style Sheets) o CSS es el lenguaje de estilos utilizado para describir
   la presentación de documentos HTML
   <img src="images/U.png"
   <br><br>
   <p>
     <h3></h3>
-    <h3> </h3>Modelo de caja </h3>
+    <h1> <h2>Modelo de caja </h2>
     </p>
     <p>
       <h3z</h3>
-      El modelo de caja está compuesto por:
+      <h2>El modelo de caja está compuesto por:</h2>
       </p>
       <h3></h3>
       Chrome va a ser el navegador que utilizaremos en el curso por su extenso soporte de nuevos estándares y herramientas de desarrollo avanzadas y de amigable uso.
       </p>
       <h3></h3>
       1. Tamaño del del contenido / ancho y alto
-  2. Padding / Relleno
-  3. Border / Bordes
-  4. Margin / Márgenes
+  <p> 2. Padding / Relleno </p>
+  <p> 3. Border / Bordes</p>
+        <p>4. Margin / Márgenes</p>
       </p>
       <p>
         <h3></h3>
-        Propiedades físicas para el modelo de caja:
+        <h2>Propiedades físicas para el modelo de caja:</h2>
         </p>
         <p>
           <h3></h3>
@@ -118,7 +150,7 @@ dependencias, herencias en css y que tan complejo es nuestro proyecto.</p>
               </p>
               <p>
                 <h3></h3>
-                Propiedades lógicas para el modelo de caja:
+                <h2>Propiedades lógicas para el modelo de caja:</h2>
                 </p>
                 <p>
                   <h3></h3>
@@ -136,11 +168,10 @@ dependencias, herencias en css y que tan complejo es nuestro proyecto.</p>
                         <h3></h3>
                         <li>padding-block | padding-inline | padding-block-start | padding-block-end | padding-inline-start | padding-inline-end</li>
                         </p>
-                        <p>
-                          <h3></h3>
-                          Modelo de caja:
-                          </p>
-                          <img src="images/R.png"
+  <p>
+Si tienes alguna pregunta escribeme a
+<a href="mailto:paolamedinag6_@dgb.email" > paolamedinag6_10@dgb.email </a>
+   </p>
   </body>
   </html>
 </body>
